Fixed missing .btn spacing in admin user overview

--- a/reserver/static/reserver/styles/gunnerus.css
+++ b/reserver/static/reserver/styles/gunnerus.css
@@ -311,6 +311,14 @@ body {
 	margin-top: 10px;
 }
 
+.user-container .extra-info .form-group {
+	margin-top: -5px;
+}
+
+.user-container .extra-info .form-group .btn {
+	margin-top: 5px;
+}
+
 /* Sidebar navigation */
 .nav-sidebar {
   margin-right: -20px; /* 20px padding + 1px border */
